fix: double border

--- a/assets/styling/main.sass
+++ b/assets/styling/main.sass
@@ -313,6 +313,13 @@ input[type="range"]
   &-Index, &-Project, &-About
     padding-top: 27.7778vh
   &-Index
+    .imageGrid-Item:first-child
+      border-top: 0
+      img
+        opacity: .1
+    .imageGrid-Item
+      img
+        opacity: .1
     .contentListItem-Header
       background: var(--background-color)
   &-Project, &-About
